# ESP32_IOT_Project

./: .cproject  .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  DHT22.c  DHT22.h  app_nvs.c  app_nvs.h  aws_iot.c  aws_iot.h  http_server.c  http_server.h  idf_component.yml  main.c  mqtt_demo_mutual_auth.c  rgb_led.c  rgb_led.h  rgb_ws2812.c  rgb_ws2812.h  sntp_time_sync.c  sntp_time_sync.h  tasks_common.h  wifi_app.c  wifi_app.h  wifi_reset_button.c  wifi_reset_button.h
main/webpage/: app.css  app.js  index.html
